[package]
name = "narrative-examples"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
narrative = { path = "../crates/narrative", features = [
  "chrono",
  "serde_json",
  "uuid",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1"
