[package]
name = "narrative-macros"
version = "0.3.0"
edition = "2021"
description = "Procedural macros for the narrative crate"
categories = []
keywords = []
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/ryo33/narrative"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
# extra-traits for PartialEq of Pat
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
