[package]
name = "narrative-macros"
version = "0.12.2"
edition = "2024"
description = "Procedural macros for the narrative crate"
readme = "../../README.md"
repository = "https://github.com/ryo33/narrative"
license = "MIT OR Apache-2.0"
keywords = []
categories = []

[lib]
proc-macro = true

[dependencies]
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
# extra-traits for PartialEq of Pat
syn = { version = "2", features = [
  "extra-traits",
  "full",
  "parsing",
  "visit",
  "visit-mut",
] }

[dev-dependencies]
pretty_assertions = "1.4.0"
