[package]
name = "narrative"
version = "0.9.0"
edition = "2021"
description = "An immensely simple library for story-driven development"
categories = ["development-tools::testing"]
keywords = ["atdd", "bdd", "story-driven", "testing"]
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/ryo33/narrative"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
narrative-macros = { version = "0.9.0", path = "../narrative-macros" }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", optional = true }
chrono = { version = "0.4", optional = true, features = ["serde"] }
uuid = { version = "1", optional = true, features = ["serde"] }
erased-serde = { version = "0.4" }

[features]
serde_json = ["dep:serde_json"]
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]
